<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>fr.lightnew</groupId>
  <artifactId>LiteFP</artifactId>
  <version>0.1.0</version>
  <packaging>jar</packaging>

  <name>LiteFP</name>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
        </configuration>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.3.0</version>
            <configuration>
                <outputDirectory>D:\.server dev\plugins</outputDirectory>
            </configuration>
        </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
        <plugin>
            <groupId>net.md-5</groupId>
            <artifactId>specialsource-maven-plugin</artifactId>
            <version>2.0.3</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>remap</goal>
                    </goals>
                    <id>remap-obf</id>
                    <configuration>
                        <srgIn>org.spigotmc:minecraft-server:1.20.1-R0.1-SNAPSHOT:txt:maps-mojang</srgIn>
                        <reverse>true</reverse>
                        <remappedDependencies>org.spigotmc:spigot:1.20.1-R0.1-SNAPSHOT:jar:remapped-mojang</remappedDependencies>
                        <remappedArtifactAttached>true</remappedArtifactAttached>
                        <remappedClassifierName>remapped-obf</remappedClassifierName>
                    </configuration>
                </execution>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>remap</goal>
                    </goals>
                    <id>remap-spigot</id>
                    <configuration>
                        <inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
                        <srgIn>org.spigotmc:minecraft-server:1.20.1-R0.1-SNAPSHOT:csrg:maps-spigot</srgIn>
                        <remappedDependencies>org.spigotmc:spigot:1.20.1-R0.1-SNAPSHOT:jar:remapped-obf</remappedDependencies>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <excludes>
            <exclude>**/*.jar</exclude>
        </excludes>
      </resource>
    </resources>
  </build>

  <repositories>
      <repository>
          <id>spigotmc-repo</id>
          <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
          <releases>
              <enabled>false</enabled>
          </releases>
          <snapshots>
              <enabled>true</enabled>
          </snapshots>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>minecraft-repo</id>
          <url>https://libraries.minecraft.net/</url>
      </repository>
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
      <repository>
          <id>minecraft-libraries</id>
          <name>Minecraft Libraries</name>
          <url>https://libraries.minecraft.net</url>
      </repository>
      <repository>
          <id>dmulloy2-repo</id>
          <url>https://repo.dmulloy2.net/repository/public/</url>
      </repository>
  </repositories>


  <dependencies>
      <dependency>
          <groupId>com.mojang</groupId>
          <artifactId>brigadier</artifactId>
          <version>1.2.9</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>com.mojang</groupId>
          <artifactId>datafixerupper</artifactId>
          <version>6.0.8</version>
      </dependency>

      <dependency>
          <groupId>org.json</groupId>
          <artifactId>json</artifactId>
          <version>20231013</version>
      </dependency>

      <dependency>
          <groupId>io.netty</groupId>
          <artifactId>netty-all</artifactId>
          <version>4.1.68.Final</version>
      </dependency>

      <dependency>
          <groupId>com.comphenix.protocol</groupId>
          <artifactId>ProtocolLib</artifactId>
          <version>5.1.0</version>
          <scope>provided</scope>
      </dependency>

      <dependency>
          <groupId>org.spigotmc</groupId>
          <artifactId>spigot-api</artifactId>
          <version>1.20.1-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.spigotmc</groupId>
          <artifactId>spigot</artifactId>
          <version>1.20.1-R0.1-SNAPSHOT</version>
          <classifier>remapped-mojang</classifier>
          <scope>provided</scope>
      </dependency>

      <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
          <version>1.18.32</version>
          <scope>provided</scope>
      </dependency>

      <dependency>
          <groupId>com.mojang</groupId>
          <artifactId>authlib</artifactId>
          <version>6.0.54</version>
          <scope>compile</scope>
      </dependency>


      <dependency>
          <groupId>org.jetbrains</groupId>
          <artifactId>annotations</artifactId>
          <version>24.1.0</version>
          <scope>compile</scope>
      </dependency>
  </dependencies>

</project>
